create curriculos routes and database
