# src/dtos/curriculo_dto.go
@@ -1,1 +1,8 @@
 package dtos
+
+type Curriculo struct {
+	Nome        string `json:"nome"`
+	Sobrenome   string `json:"sobrenome"`
+	Formacao    string `json:"formacao"`
+	Experiencia string `json:"experiencia"`
+}
